# fritzlib

./: LICENSE  README.md  pyproject.toml  setup.py
OpenWindowGroup/: OpenWindowSwitch.py  readme.txt
fritzbox-library/: README.md  requirements.txt  setup.py
fritzbox-library/fritzbox_library/: __init__.py  fritz_classes.py
fritzbox-library/tests/: test_fritz_classes.py
fritzlib/: FritzClasses.py  pyproject.toml  setup.py
fritzlib/fritzlib/: __init__.py
fritzlib/tests/: test_fritzlib.py
