[tool.poetry]
name = "fritzlib"
version = "0.1.0"
description = "A library for managing Fritzbox devices and login operations."
authors = ["Franz Keller frakel1@outlook.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"